# privy

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/: 20260218030728_create_secret_table.down.sql  20260218030728_create_secret_table.up.sql
src/: clap_banner.rs  clap_styles.rs  db.rs  getpass.rs  main.rs  secret.rs  vault.rs
