[package]
name = "privy"
version = "0.1.0"
description = "A secrets manager"
authors = ["0xHoon <maxineelington@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
color-eyre = "0.6.3"
crossterm = "0.29.0"
clap = { version = "4.5.59", features = ["derive"] }
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tabled = { version = "0.20.0", features = ["ansi"] }
serde_yaml = "0.9.34"
arboard = "3.6.1"
age = "0.11.2"
rpassword = "7.4.0"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "macros", "sqlite", "migrate", "chrono"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher"] }
log = "0.4.29"
env_logger = "0.11.9"
anstyle = "1.0.13"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
